Fixed overlapping people boxes & not showing them

--- a/app/assets/stylesheets/modules/data_collection.sass
+++ b/app/assets/stylesheets/modules/data_collection.sass
@@ -86,6 +86,8 @@ body.data_collection
       clear: both
       display: block
       margin-left: 0
+  form fieldset.person-selector
+    margin-top: 18px
   div.controls .cta-pill
     min-width: 160px
     width: auto
